--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,15 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: rgb(70,110,145);
+  background: linear-gradient(180deg, rgba(70,110,145,1) 33%, rgba(255,255,255,1) 33%);
+  background-repeat: no-repeat;
 }
+
 
 .main{
   display: flex;
+  padding: 100px 100px 60px 100px;
   justify-content: center;
 }
 
@@ -18,15 +23,45 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin-left: 100px;
 }
 
-.footer ul {
-display: flex;
-justify-content: center;
+.insta {
+  flex-direction: row;
 }
 
-.footer li{
+.insta button {
+  background-color: rgb(87, 128, 159);
+  color: white;
+}
+
+#text {
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 20px 50px 50px 50px;
+}
+
+
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+footer ul {
+  display: flex;
   list-style: none;
-  
 }
 
+footer ul li {
+  margin-left: 15px;
+}
+
+footer a {
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 500;
+} 
