--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,139 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+* {
+  font-size: 10px;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: rgb(28, 83, 128);
+  background: linear-gradient(
+    180deg,
+    rgba(28, 83, 128, 1) 0%,
+    rgba(6, 54, 95, 1) 41%,
+    rgba(255, 255, 255, 1) 41%
+  );
+  background-repeat: none;
+  background-size: 100%;
+  height: 100rem;
+}
+
+.phonesDiv {
+  width: 30rem;
+  padding-right: 15rem;
+}
+
+#phone {
+  width: 45rem;
+}
+
+#landing {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10rem;
+}
+
+.rightSide {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  align-content: flex-start;
+}
+
+button {
+  background: rgb(111, 168, 215);
+  background: linear-gradient(
+    180deg,
+    rgba(111, 168, 215, 1) 5%,
+    rgba(6, 54, 95, 1) 100%
+  );
+  color: #ffff;
+  width: 15rem;
+  height: 7rem;
+  font-size: 3rem;
+  font-weight: 700;
   margin: 0;
+  border: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.house {
+  width: 4rem;
+}
+
+h3 {
+  font-size: 4rem;
+  color: #06365f;
+  width: 45rem;
+  padding-top: 0rem;
+}
+
+p {
+  font-size: 2.5rem;
+  width: 70rem;
+}
+
+#degrBack {
+
+  background-image: url(../images/frame.png);
+  background-size: 80rem 55rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-top-left-radius: 1rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  border-top-right-radius: 1rem;
+  margin-left: 10rem;
+}
+
+ul {
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 700;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 8rem;
+  padding-bottom: 5rem;
+}
+
+li {
+  padding-left: 3rem;
+  padding-right: 3rem;
+  font-size: 1.6rem;
+  color: grey;
+}
+
+a {
+  text-decoration: none;
+  color: #06365f;
+  font-size: 2rem;
+}
+
+.logoDiv {
+  display: flex;
+  width: 90rem;
+  height: 10rem;
+  align-content: flex-start;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 0;
+  padding-bottom: 5rem;
+}
+
+#instagramLogo {
+  padding-left: 5rem;
+  margin: 0;
+  width: 50rem;
+}
+
+.badge {
+  width: 25rem;
+  padding-right: 2rem;
+}
+
+#iphone {
+  width: 27rem;
 }
