--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,24 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+  background-image: url('../images/bgtile.png');
+  background-size: 100vw 33vh;
+  background-repeat: no-repeat;
+}
+
+.content {
+  display: flex;
+}
+
+
+ul li {
+list-style: none;
+}
+
+.list-container {
+  display: flex;
+  justify-content: space-around;
 }
