--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,110 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+:root {
+  --dark-blue: #06365f;
+  --light-blue: #1c5380;
+}
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+main {
+  position: relative;
+}
+
+.blue-bg {
+  position: absolute;
+  height: 20rem;
+  width: 100vw;
+  z-index: -10;
+  background-color: var(--light-blue);
+}
+
+.flex-wrapper {
+  display: flex;
+  margin: 0rem 10rem 5rem 10rem;
+  padding-top: 7rem;
+}
+
+.right {
+  margin-left: 3rem;
+}
+
+.right-header {
+  display: flex;
+  align-items: center;
+}
+
+.right-header span {
+  margin-left: 1rem;
+}
+
+.right-login-btn {
+  text-decoration: none;
+  border: 1px var(--dark-blue) solid;
+  background-color: var(--light-blue);
+  padding: 0.5em 0.9em;
+  box-shadow: 0px 0px 1px 1px var(--dark-blue);
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.329) 20%,
+    rgba(255, 255, 255, 0.007)
+  );
+  border-radius: 5px;
+}
+
+.insta-logo {
+  margin-right: 4rem;
+}
+
+.right-login-btn span {
+  font-weight: 900;
+  color: rgba(255, 255, 255, 0.788);
+}
+
+.right-main {
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+}
+
+.right-main > h2 {
+  color: var(--dark-blue);
+  padding: 2rem 2rem 0 2rem;
+}
+
+.right-main > p {
+  padding: 0 2rem 0 2rem;
+  width: 60%;
+  font-size: 1rem;
+}
+
+.right-main span {
+  font-weight: 900;
+}
+
+.right-stores {
+  padding: 1rem 2rem 0 2rem;
+}
+
+.google-play {
+  margin-left: 1rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer a {
+  text-decoration: none;
+  color: var(--light-blue);
+  font-size: 0.8rem;
+  font-weight: 900;
+  margin-right: 2rem;
 }
