--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ main {
   border: 1px var(--dark-blue) solid;
   background-color: var(--light-blue);
   padding: 0.5em 0.9em;
-  box-shadow: 0px 0px 1px 1px var(--dark-blue);
+  box-shadow: 0px 0px 0.5px 0.5px var(--dark-blue);
   background: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0.329) 20%,
@@ -68,6 +68,10 @@ main {
 .right-login-btn span {
   font-weight: 900;
   color: rgba(255, 255, 255, 0.788);
+}
+
+.right-login-btn > img {
+  vertical-align: middle;
 }
 
 .right-main {
