--- a/styles/style.css
+++ b/styles/style.css
@@ -16,14 +16,93 @@ body {
 
 .content {
   display: flex;
+  position: relative;
+  margin-top: 6%;
+  justify-content: center;
+}
+
+
+header {
+  width: 100%;
+  display: inline-flex;
+  flex-direction: row;
+  align-items:center;
+  position: relative;
+  justify-content: space-between;
+  
+}
+
+
+
+
+.login {
+  background-image: url('../images/bgtile.png');
+  background-size:cover;
+  color: snow;
+  border: 1px solid #1c5380 ;
+  border-radius: 5px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.555);
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.txt-login {
+  padding: 0px 5px;
+}
+
+
+
+section {
+max-width: 30%;
+margin-left: 20px;
+position: relative;
+}
+
+.txt {
+padding: 40px;
+background-color: white;
+border-radius: 7px;
+box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.24);
+}
+
+.txt > p {
+font-weight: 300;
+font-size: 16px;
+}
+
+button {
+  outline: transparent;
+  background-color: transparent;
+  border: none;
+  text-decoration: none;
+
+}
+
+/* FOOTER */
+
+footer {
+justify-content: center ;
+position: relative;
+
+}
+
+.list-container {
+  display: flex;
+  max-width: 50vw;
+  position: absolute;
+  left: 25%;
+
 }
 
 
 ul li {
 list-style: none;
+font-weight: 500;
+color: #06365f;
+padding: 15px;
 }
 
-.list-container {
-  display: flex;
-  justify-content: space-around;
+li:nth-child(9) {
+  color:rgba(128, 128, 128, 0.575);
 }
