--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,40 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color:white;
+  
+}
+
+.upperContainer {
+  background-image: url(/images/bgtile.png);
+}
+
+.phones, .content {
+  margin-top: 5vh;
+}
+
+.phones {
+  float: left;
+  width: 30vw;
+  padding: 0 5vw;
+}
+.phones img {
+  width: 100%;
+  height: auto;
+}
+
+.content {
+  float: left;
+  width: 55vw;
+  background-color: aquamarine;
+  border-radius: 2%;
+}
+
+footer {
+  float: unset;
+  width: 100%;
 }
