--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,70 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+.background {
+  background-color: #4e7699;
+  width: 100vw;
+  height: 35%;
+  position: absolute;
+  z-index: -1;
+
+}
+section {
+  
+  width: 80%;
+  padding: 10%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.about {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.about header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+} 
+.about header button {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100px;
+  background-color: #4e789d;
+  color: white;
+  font-size: medium;
+  font-weight: bold;
+  border-radius: 10%;
+}
+.text {
+  background-color: white;
+  padding: 5%;
+  margin-top: 20px;
+  border-radius: 2%;
+  box-shadow: 0px 2px 10px 5px rgba(80, 79, 79, 0.247);
+}
+.text h2 {
+  color: #527a9d;
+  font-size: 1.8em;
+  margin-top: 0px;
+}
+.badge img {
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+footer ul {
+  margin: auto;
+  width: 50%; 
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+  font-weight: 700;
+  color: #527a9d;
+  
 }
