--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,26 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+nav {
+  background-color: #1c5380;
+  display: flex;
+  padding: 100px;
+}
+
+.section-one {
+ display: flex;
+ 
+
+}
+
+.section-one div {
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 45%;
+  padding: 20px;
+}
+
+#imagePhone {
+  position: 
+}
