--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,57 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 800px;
+}
+
+.white-box {
+  
+  padding: 30px;
+  border-radius: 12px;
+  width: 400px;
+  
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.insta-logo {
+  height: 80px;
+}
+
+.home {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #1c5380;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.home-icon {
+  height: 25px;
+}
+
+.log-in {
+  font-size: 16px;
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  margin-left: 10px;
+  padding-right: 10px;
+}
+
+.main-info {
+  margin-left: 50px;
+}
+
+.shop-btn {
+  margin: 20px 10px 10px 0px;
 }
